--- a/app/sba/postgres.yaml
+++ b/app/sba/postgres.yaml
@@ -20,9 +20,11 @@ spec:
       containers:
       - image: postgres
         name: postgres
-        Environment:
-          POSTGRES_USER:      postgres
-          POSTGRES_PASSWORD:  postgres
-          POSTGRES_DB:        app
-        resources: {}
+        env:
+        - name: POSTGRES_USER
+          value: "postgres"
+        - name: POSTGRES_PASSWORD
+          value: "postgres"
+        - name: POSTGRES_DB
+          value: "app"
 status: {}
