--- a/kubernetes/lab/03-deployment/strategy/blueGreen/green/deployment.yaml
+++ b/kubernetes/lab/03-deployment/strategy/blueGreen/green/deployment.yaml
@@ -1,30 +1,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: facebook-v1
+  name: facebook-v2
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: facebook
-      release: v1
+      release: v2
+  strategy: {}
   template:
     metadata:
+      creationTimestamp: null
       labels:
         app: facebook
-        release: v1
+        release: v2
     spec:
       containers:
       - image: cielszx/sba-frontend:v3
-        imagePullPolicy: IfNotPresent
-        name: facebook-app
-        ports:
-        - containerPort: 8080
-          protocol: TCP
-        resources: 
-          limits:
-            cpu: 20m
-            memory: 50Mi
-          requests:
-            cpu: 20m
-            memory: 50Mi  
+        name: sba-frontend
+        env:
+        - name: REACT_APP_API_URL
+          value: "https://scbcepb3u8-app.brainupgrade.net/api/"
+status: {}
