--- a/app/sba/frontend.yaml
+++ b/app/sba/frontend.yaml
@@ -23,4 +23,28 @@ spec:
         env:
         - name: REACT_APP_API_URL
           value: "https://scbcepb3u8-app.brainupgrade.net/api/"
+      startupProbe:
+        httpGet:
+          path: /healthz
+          port: 80
+        failureThreshold: 5
+        successThreshold: 1
+        periodSeconds: 10
+        initialDelaySeconds: 9
+      livenessProbe:
+        httpGet:
+          path: /healthz
+          port: 80
+        initialDelaySeconds: 0
+        periodSeconds: 20
+        successThreshold: 1
+        failureThreshold: 3
+      readinessProbe:
+        httpGet:
+          path: /healthz
+          port: 80
+        initialDelaySeconds: 0
+        periodSeconds: 5
+        successThreshold: 1
+        failureThreshold: 1
 status: {}
