--- a/app/weather/08b-config.yaml
+++ b/app/weather/08b-config.yaml
@@ -6,5 +6,5 @@ data:
   ELASTIC_APM_SERVER_URL: "http://apm-server.elasticsearch.svc.cluster.local:8200"
   ELASTIC_APM_APPLICATION_PACKAGES: "in.brainupgrade" 
   spring.datasource.url: "jdbc:mariadb://weather-db:3306/weather"
-  weatherServiceURL: "http://weather-services"
+  apiServiceURL: "http://weather-services"
 
