--- a/app/sba/apiserver.yaml
+++ b/app/sba/apiserver.yaml
@@ -27,6 +27,13 @@ spec:
                     values:
                     - frontend
               topologyKey: kubernetes.io/hostname
+      topologySpreadConstraints:
+      - maxSkew: 1
+        topologyKey: topology.kubernetes.io/zone
+        whenUnsatisfiable: DoNotSchedule
+        labelSelector:
+          matchLabels:
+            app: apiserver
       containers:
       - image: cielszx/sba:v2
         name: sba-apiserver
