--- a/app/sba/kubernetes/api-server.yaml
+++ b/app/sba/kubernetes/api-server.yaml
@@ -62,7 +62,7 @@ spec:
           name: elastic-apm-agent 
         command: ['cp', '-v', '/usr/agent/elastic-apm-agent.jar', '/elastic/apm/agent']     
       containers:
-      - image: cielszx/sba:v2
+      - image: cielszx/sba:sqsses
         name: sba-apiserver
         imagePullPolicy: Always
         volumeMounts: 
