--- a/app/sba/kubernetes/api-server.yaml
+++ b/app/sba/kubernetes/api-server.yaml
@@ -34,16 +34,16 @@ spec:
         prometheus.io/port: "8888"
         prometheus.io/path: /actuator/prometheus        
     spec:
-      # affinity:
-      #     podAntiAffinity:
-      #       requiredDuringSchedulingIgnoredDuringExecution:
-      #       - labelSelector:
-      #             matchExpressions:
-      #             - key: app
-      #               operator: In
-      #               values:
-      #               - frontend
-      #         topologyKey: kubernetes.io/hostname
+      affinity:
+          podAntiAffinity:
+            requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                  matchExpressions:
+                  - key: app
+                    operator: In
+                    values:
+                    - frontend
+              topologyKey: kubernetes.io/hostname
       topologySpreadConstraints:
       - maxSkew: 1
         topologyKey: kubernetes.io/hostname
